force-app/main/default/objects/Flow_Analysis__c/Flow_Analysis__c.object-meta.xml
<CustomObject>
    <label>Flow Analysis</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>