force-app/main/default/objects/Flow_Analysis__c/fields/Analysis_Report__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Report__c</fullName>
    <label>Analysis Report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>