force-app/main/default/objects/Flow_Analysis__c/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <label>Flow Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>