force-app/main/default/objects/Flow_Analysis__c/fields/Last_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Last_Analyzed__c</fullName>
    <label>Last Analyzed</label>
    <type>DateTime</type>
</CustomField>