force-app/main/default/objects/Flow_Analysis__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>