force-app/main/default/objects/Flow_Analysis__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <formula>IF(
    ISBLANK(Overall_Score__c),
    "Not Analyzed",
    IF(
        Overall_Score__c &gt;= 80,
        "PASS",
        IF(
            Overall_Score__c &gt;= 50,
            "NEEDS_WORK",
            "FAIL"
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Status</label>
    <type>Text</type>
</CustomField>