force-app/main/default/objects/Flow_Analysis__c/fields/Raw_Findings__c.field-meta.xml
<CustomField>
    <fullName>Raw_Findings__c</fullName>
    <label>Raw Findings (JSON)</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>