force-app/main/default/objects/Flow_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flow_Label__c</columns>
    <columns>Flow_API_Name__c</columns>
    <columns>Flow_Version__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Analyzed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>